platforms/ack/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: frontend-gateway
  namespace: online-boutique
  annotations:
    cert-manager.io/cluster-issuer: __TLS_ISSUER__
spec:
  gatewayClassName: alb
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: __APP_DOMAIN__
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: __APP_DOMAIN__
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: frontend-tls
      allowedRoutes:
        namespaces:
          from: Same
